--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />    
 </head>
 <body>
-                    <img src="image/c top.png" class="fixedTop inline" id="toTop" onclick="Clicking();" />
+                    <img src="image/c top.png" class="fixedTop inline" id="toTop"/>
                
                     <input type="image" src="image/EAとは？.png" id="toEA" name="saveForm" class="fixedTop inline"/>
                 
@@ -49,19 +49,19 @@
       <!-- //EAとは？ -->
       <div id="eaPos" class="containBtn">
         <image src="/image/ceed Hp　ea (4).jpg" name="saveForm" class="sidepd responsiveImg"/>
-        <a href="/html/whatisea.html" id="gotoea" class="goto">さらに詳しく &#62;</a>
+        <a href="/whatisea" id="gotoea" class="goto">さらに詳しく &#62;</a>
       </div>
 
       <!-- //無料の理由 -->
       <div class="sidepd responsiveImg containBtn" id="freePos">
         <img src="/image/ceed Hp mryou.jpg">
-        <a href="/html/free.html" id="gotofree" class="goto">さらに詳しく &#62;</a>
+        <a href="/free" id="gotofree" class="goto">さらに詳しく &#62;</a>
       </div>
 
       <!-- //Live配信 -->
       <div class="containBtn" id="livePos">
         <image src="/image/ceed Hp live.jpg" name="saveForm" class="sidepd responsiveImg"/>
-        <a href="/html/stream.html" id="gotostream" class="goto">さらに詳しく &#62;</a>
+        <a href="/stream" id="gotostream" class="goto">さらに詳しく &#62;</a>
       </div>
       <!-- Line@ -->
       <div id="linePos">
@@ -108,7 +108,7 @@
                           <div class="col-sm-2 blackDiv footerList">
                               <h5>企業情報</h5>
                               <ul>
-                                  <li><a href="/html/privacypolicy.html">プライバシーポリシー</a></li>
+                                  <li><a href="/privacypolicy">プライバシーポリシー</a></li>
                               
                               </ul>
                           </div>
@@ -118,7 +118,7 @@
                                   <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                   <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
                               </div>
-                              <button type="button" class="btn btn-default">TOPに戻る</button>
+                              <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
                           </div>
                       </div>
                   </div>
