--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -13,7 +13,9 @@
     <script src="../main.js"></script>
 </head>
 <body>
-
+    <div class="videocontainer">
+    <iframe class="streamframe" width="520" height="300" src="https://www.youtube.com/embed/yfrbCT0JfO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
     <footer id="myFooter">
         <div id="mycontainer" class="container blackDiv">
@@ -51,7 +53,7 @@
                 <div class="col-sm-2 blackDiv footerList">
                     <h5>企業情報</h5>
                     <ul>
-                        <li><a href="html/privacypolicy.html">プライバシーポリシー</a></li>
+                        <li><a href="/privacypolicy">プライバシーポリシー</a></li>
                     
                     </ul>
                 </div>
@@ -61,7 +63,7 @@
                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
                     </div>
-                    <button onclick="location.href='/index.html'" type="button" class="btn btn-default">TOPに戻る</button>
+                    <button type="button" class="btn btn-default">TOPに戻る</button>
                 </div>
             </div>
         </div>
