--- a/views/whatisea.ejs
+++ b/views/whatisea.ejs
@@ -67,7 +67,7 @@
                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
                     </div>
-                    <button onclick="location.href='/index.html'" type="button" class="btn btn-default">TOPに戻る</button>
+                    <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
                 </div>
             </div>
         </div>
