--- a/views/privacypolicy.ejs
+++ b/views/privacypolicy.ejs
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
-    <link href="../main.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="../bulma/bulma.css">
+    <link href="/../main.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="/../bulma/bulma.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <title>Document</title>
-    <script src="../main.js"></script>
+    
 </head>
 <body>
-
+    <img src="/image/ceed Hp privacy.jpg">
+    <img src="/image/privacy1.jpg" class="sidepd2">
+    <img src="/image/privacy2.jpg" class="sidepd2">
 
     <footer id="myFooter">
         <div id="mycontainer" class="container blackDiv">
@@ -61,7 +62,7 @@
                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
                     </div>
-                    <button onclick="location.href='/index.html'" type="button" class="btn btn-default">TOPに戻る</button>
+                    <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
                 </div>
             </div>
         </div>
@@ -69,13 +70,8 @@
             <p>© 2019 Copyright IFC GROUP </p>
         </div>
     </footer>
-    
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-            crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="main.js"></script>
-</body>
+              <meta name="viewport" content="width=device-width, initial-scale=1">
+              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+              <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          </body>
 </html>
