04 added new image for whatisea

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
       </div>
       <!-- さあはじめよう -->
       <div id="startPos">
-        <img class="top-padding responsiveImg" src="/image/ceed start.jpg">
+        <input type="image" src="/image/ceed start.jpg" onclick="location.href='/start'" />
       </div>
       <!-- フッター -->
               <footer id="myFooter">
