--- a/main.css
+++ b/main.css
@@ -56,6 +56,15 @@ body{
     padding: 0% 10% 0% 10%;
 }
 
+.sidepd3{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.addtoppd{
+    padding-top: 5%;
+}
+
 
 .navbar
 {
