--- a/views/start.ejs
+++ b/views/start.ejs
@@ -2,27 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
-    <link href="/../main.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="/../bulma/bulma.css">
+    <link href="../main.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="../bulma/bulma.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <title>Document</title>
-    
+    <script src="../main.js"></script>
 </head>
 <body>
-    <img src="/image/ceed Hp EAとは.jpg">
-    <img src="/image/EAとはtop.jpg" class="sidepd2 addtoppd">
-    <img src="/image/EAとはtop2.jpg" class="sidepd2">
-    <img src="/image/ceed Hp EAとは１ (1).jpg" class="sidepd2">
-    <img src="/image/ceed Hp EAとは２.jpg" class="sidepd2">
-    <img src="/image/ceed Hp EAとは３.jpg" class="sidepd2">
-    <div class="containBtn whitediv">
-    <img src="/image/ceed Hp EAとは４ - コピー.jpg" class="sidepd">
-    <a href="/html/stream.html" id="gotostream2" class="goto">さらに詳しく &#62;</a>
-    </div>
-    <input class="sidepd3" type="image" src="/image/ceed start.jpg" onclick="location.href='/start'" />
+    
     <footer id="myFooter">
         <div id="mycontainer" class="container blackDiv">
             <div class="row blackDiv"> 
@@ -59,7 +50,7 @@
                 <div class="col-sm-2 blackDiv footerList">
                     <h5>企業情報</h5>
                     <ul>
-                        <li><a href="privacypolicy">プライバシーポリシー</a></li>
+                        <li><a href="/privacypolicy">プライバシーポリシー</a></li>
                     
                     </ul>
                 </div>
@@ -69,7 +60,7 @@
                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
                     </div>
-                    <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
+                    <button type="button" class="btn btn-default">TOPに戻る</button>
                 </div>
             </div>
         </div>
@@ -77,12 +68,13 @@
             <p>© 2019 Copyright IFC GROUP </p>
         </div>
     </footer>
-              <meta name="viewport" content="width=device-width, initial-scale=1">
-              <script src="https://code.jquery.com/jquery-3.4.1.js"
-                      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-                      crossorigin="anonymous"></script>
-              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-              <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-          </body>
-          <script src="/../main.js"></script>
+    
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="main.js"></script>
+</body>
 </html>
