--- a/views/whatisea.ejs
+++ b/views/whatisea.ejs
@@ -20,7 +20,7 @@
     <img src="/image/ceed Hp EAとは３.jpg" class="sidepd2">
     <div class="containBtn whitediv">
     <img src="/image/ceed Hp EAとは４ - コピー.jpg" class="sidepd">
-    <a href="/html/stream.html" id="gotostream2" class="goto">さらに詳しく &#62;</a>
+    <a href="/stream" id="gotostream2" class="goto">さらに詳しく &#62;</a>
     </div>
     <input class="sidepd3" type="image" src="/image/ceed start.jpg" onclick="location.href='/start'" />
     <footer id="myFooter">
