--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,13 +93,13 @@
                           <div class="col-sm-2 blackDiv footerList">
                               <h5>サポート</h5>
                               <ul>
-                                  <li><a href="#">IFC EA LINE@</a></li>
+                                  <li><a href="https://line.me/R/ti/p/%40vbu5369m">IFC EA LINE@</a></li>
                               </ul>
                           </div>
                           <div class="col-sm-2 blackDiv footerList">
                               <h5>場所</h5>
                               <ul>
-                                  <li><a>JAPAN</a></li>
+                                  <li>JAPAN</li>
                               
                               </ul>
                           </div>
