--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,13 +81,12 @@
                           <div class="col-sm-2 blackDiv footerList" >
                               <h5>製品情報</h5>
                               <ul>
-                                  <li><a href="#">無料EA CEED</a></li>
-                                  <li><a href="#">有料EA AUZIE</a></li>
-                                  <li><a href="#">有料EA BEE</a></li>
-                                  <li><a href="#">IFC SYSTEM1</a></li>
-                                  <li><a href="#">IFC SYSTEM2</a></li>
-                                  <li><a href="#">IFC SYSTEM3</a></li>
-                                  <li><a href="#">IFC SYSTEM4</a></li>
+                                  <li><a href="https://www.ifc752.com/gallery">有料EA AUZIE</a></li>
+                                  <li><a href="https://www.ifc752.com/bee">有料EA BEE</a></li>
+                                  <li><a href="https://www.ifc752.com/blank-2">IFC SYSTEM1</a></li>
+                                  <li><a href="https://www.ifc752.com/ifcsystem1">IFC SYSTEM2</a></li>
+                                  <li><a href="https://www.ifc752.com/ifcsystem2">IFC SYSTEM3</a></li>
+                                  <li><a href="https://www.ifc752.com/ifcsystem4-3">IFC SYSTEM4</a></li>
                               </ul>
                           </div>
                           <div class="col-sm-2 blackDiv footerList">
@@ -111,11 +110,6 @@
                               </ul>
                           </div>
                           <div class="col-sm-2 blackDiv">
-                              <div class="social-networks blackDiv">
-                                  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                                  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                                  <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                              </div>
                               <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
                           </div>
                       </div>
