--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -26,27 +26,24 @@
                 <div class="col-sm-2 blackDiv footerList" >
                     <h5>製品情報</h5>
                     <ul>
-                        <li><a href="#">無料EA CEED</a></li>
-                        <li><a href="#">有料EA AUZIE</a></li>
-                        <li><a href="#">有料EA BEE</a></li>
-                        <li><a href="#">IFC SYSTEM1</a></li>
-                        <li><a href="#">IFC SYSTEM2</a></li>
-                        <li><a href="#">IFC SYSTEM3</a></li>
-                        <li><a href="#">IFC SYSTEM4</a></li>
+                        <li><a href="https://www.ifc752.com/gallery">有料EA AUZIE</a></li>
+                        <li><a href="https://www.ifc752.com/bee">有料EA BEE</a></li>
+                        <li><a href="https://www.ifc752.com/blank-2">IFC SYSTEM1</a></li>
+                        <li><a href="https://www.ifc752.com/ifcsystem1">IFC SYSTEM2</a></li>
+                        <li><a href="https://www.ifc752.com/ifcsystem2">IFC SYSTEM3</a></li>
+                        <li><a href="https://www.ifc752.com/ifcsystem4-3">IFC SYSTEM4</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2 blackDiv footerList">
                     <h5>サポート</h5>
                     <ul>
-                        <li><a href="#">IFC Group LINE@</a></li>
-                        <li><a href="#">AUZIE LINE@</a></li>
-                        <li><a href="#">CEED LINE@</a></li>
+                        <li><a href="https://line.me/R/ti/p/%40vbu5369m">IFC EA LINE@</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2 blackDiv footerList">
                     <h5>場所</h5>
                     <ul>
-                        <li><a href="#">JAPAN</a></li>
+                        <li>JAPAN</li>
                     
                     </ul>
                 </div>
@@ -58,12 +55,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-2 blackDiv">
-                    <div class="social-networks blackDiv">
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                    </div>
-                    <button type="button" class="btn btn-default">TOPに戻る</button>
+                    <button onclick="location.href='/'" type="button" class="btn btn-default">TOPに戻る</button>
                 </div>
             </div>
         </div>
@@ -80,4 +72,5 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="main.js"></script>
 </body>
+
 </html>
