08 views free change

--- a/views/free.ejs
+++ b/views/free.ejs
@@ -13,7 +13,12 @@
     <script src="../main.js"></script>
 </head>
 <body>
-
+    <img src="/image/e1.jpg">
+    <img src="/image/e2.jpg">
+    <img src="/image/e3.jpg">
+    <img src="/image/e4.jpg">
+    <img src="/image/e5.jpg">
+    <img src="/image/e6.jpg">
 
     <footer id="myFooter">
         <div id="mycontainer" class="container blackDiv">
