--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
       </div>
       <!-- Line@ -->
       <div id="linePos">
-        <img src="/image/ceed Hpline (4).jpg">
+        <input type="image" src="/image/ceed Hpline (4).jpg" onclick="location.href='https://line.me/R/ti/p/%40rin8918r'" />
       </div>
       <!-- さあはじめよう -->
       <div id="startPos">
