09 views free added sidepd

--- a/views/free.ejs
+++ b/views/free.ejs
@@ -13,13 +13,14 @@
     <script src="../main.js"></script>
 </head>
 <body>
+    <div>
     <img src="/image/e1.jpg">
-    <img src="/image/e2.jpg">
-    <img src="/image/e3.jpg">
-    <img src="/image/e4.jpg">
-    <img src="/image/e5.jpg">
-    <img src="/image/e6.jpg">
-
+    <img src="/image/e2.jpg" class="sidepd">
+    <img src="/image/e3.jpg" class="sidepd">
+    <img src="/image/e4.jpg" class="sidepd">
+    <img src="/image/e5.jpg" class="sidepd">
+    <img src="/image/e6.jpg" class="sidepd">
+    </div>
     <footer id="myFooter">
         <div id="mycontainer" class="container blackDiv">
             <div class="row blackDiv"> 
