10 views free change to white div

--- a/views/free.ejs
+++ b/views/free.ejs
@@ -13,7 +13,7 @@
     <script src="../main.js"></script>
 </head>
 <body>
-    <div>
+    <div class="whitediv">
     <img src="/image/e1.jpg">
     <img src="/image/e2.jpg" class="sidepd">
     <img src="/image/e3.jpg" class="sidepd">
